--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/neverendingqs/netlify-express.git"
+    "url": "git+https://github.com/aminos02/Deploy-Socket.io-Server-in-Netlify.git"
   },
   "keywords": [
     "netlify",
@@ -18,9 +18,9 @@
   "author": "neverendingqs",
   "license": "Apache-2.0",
   "bugs": {
-    "url": "https://github.com/neverendingqs/netlify-express/issues"
+    "url": "https://github.com/aminos02/Deploy-Socket.io-Server-in-Netlify/issues"
   },
-  "homepage": "https://github.com/neverendingqs/netlify-express#readme",
+  "homepage": "https://github.com/aminos02/Deploy-Socket.io-Server-in-Netlify#readme",
   "dependencies": {},
   "devDependencies": {
     "body-parser": "^1.19.0",
