--- a/package.json
+++ b/package.json
@@ -21,7 +21,9 @@
     "url": "https://github.com/aminos02/Deploy-Socket.io-Server-in-Netlify/issues"
   },
   "homepage": "https://github.com/aminos02/Deploy-Socket.io-Server-in-Netlify#readme",
-  "dependencies": {},
+  "dependencies": {
+    "socket.io": "^4.2.0"
+  },
   "devDependencies": {
     "body-parser": "^1.19.0",
     "express": "^4.17.1",
